<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    tools:context=".Signup">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:textSize="30dp"
        android:id="@+id/heading"
        android:layout_centerHorizontal="true"
        ></TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/heading"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        ></ImageView>

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:text="@string/select_button"></Button>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtName"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnUpload"
        android:layout_alignParentLeft="true"
        android:hint="@string/name_textbox"
        ></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtIdNo"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtName"
        android:layout_alignParentLeft="true"
        android:hint="@string/id_textbox"
        ></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPhone"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtIdNo"
        android:layout_alignParentLeft="true"
        android:hint="@string/phone_textbox"
        ></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddress"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtPhone"
        android:layout_alignParentLeft="true"
        android:hint="@string/address_textbox"
        ></EditText>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAddress"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_textbox"
            android:textSize="20dp"></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmergencyNo"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtEmail"
        android:layout_alignParentLeft="true"
        android:hint="@string/emergency_phone_textbox"
        ></EditText>

        <EditText
            android:id="@+id/txtPhrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEmergencyNo"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:hint="@string/phrase_textbox"
            android:textSize="20dp"></EditText>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:layout_below="@+id/txtPhrase"
        android:text="@string/account_btn"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        ></Button>

        <ImageView
            android:id="@+id/btnSpeech"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignRight="@+id/txtPhrase"
            android:layout_alignBottom="@+id/txtPhrase"
            android:src="@drawable/micc"
            android:layout_marginBottom="10dp"
            ></ImageView>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>