<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/setting_heading"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_heading"
        android:textSize="30dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmergencyNo"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/setting_heading"
        android:layout_alignParentLeft="true"
        android:hint="@string/emergency_phone_textbox"
        ></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPhrase"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtEmergencyNo"
        android:layout_alignParentLeft="true"
        android:hint="@string/phrase_textbox"
        ></EditText>
    <ImageView
        android:id="@+id/btnSpeech"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/txtPhrase"
        android:layout_alignBottom="@+id/txtPhrase"
        android:src="@drawable/micc"
        android:layout_marginBottom="10dp"
    ></ImageView>
    <Button
        android:id="@+id/btnUpdateSetting"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPhrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/setting_btn"></Button>

</RelativeLayout>